[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
name = "geopost"
version = "0.1.0"

[dependencies]
clap = "2.27.1"
csv = "1.0.0-beta.5"
futures = "0.1.17"
hyper = "0.11.6"
sentry = "0.2.0"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.5"
slog = "2.0.12"
slog-async = "2.1.0"
slog-term = "2.2.0"
