[package]
authors = ["Łukasz Jan Niemier <lukasz@niemier.pl>"]
name = "geopost"
publish = false
version = "0.1.0"

[dependencies]
clap = "2.27.1"
csv = "1.0.0-beta.5"
futures = "0.1.17"
hyper = "0.11.6"
nix = "0.9.0"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.5"
signal = "0.4.1"
slog = "2.0.12"
sloggers = "0.2.1"

[dependencies.sentry]
optional = true
version = "0.2.0"
[profile.release]
lto = true
